confluence/10-confluence-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: confluence
  namespace: confluence
  labels:
    app: confluence
    type: statefulset
spec:
  serviceName: "confluence"
  replicas: 1
  selector:
    matchLabels:
      app: confluence
      type: pod      
  template:
    metadata:
      labels:
        app: confluence
        type: pod
    spec:
      containers:
      - name: confluence
        image: atlassian/confluence-server:latest
        ports:
        - containerPort: 8090
        volumeMounts:
        - mountPath: "/var/atlassian/application-data/confluence"
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
