confluence/05-postgresql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: confluence
  labels:
    app: postgres
    type: service
spec:
  selector:
    app: postgres
    type: pod
  ports:
    - port: 5432
      name: postgres
