confluence/09-confluence-service.yml
apiVersion: v1
kind: Service
metadata:
  name: confluence
  namespace: confluence
  labels:
    app: confluence
    type: service
spec:
  selector:
    app: confluence
    type: pod
  ports:
    - port: 8090
      name: confluence
