confluence/11-confluence-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confluence
  namespace: confluence
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "200m"
spec:
  tls:
  - hosts:
      - "confluence.domain.tld"
    secretName: "confluence-tls"
  rules:
  - host: "confluence.domain.tld"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "confluence"
            port:
              number: 8090
